<resources>
    <string name="app_name">Air Alert ClockDesk Plugin</string>
    <string name="plugin_name">Air Alerts</string>
    <string name="plugin_description">Plugin for monitoring air alerts via siren.pp.ua API</string>
    <string name="settings_title">Settings</string>
    <string name="region_monitoring">Region for monitoring</string>
    <string name="not_selected">Not selected</string>
    <string name="click_to_change">Click to change</string>
    <string name="appearance">Appearance</string>
    <string name="show_no_alert">Show when there is no alert</string>
    <string name="api_footer">Plugin retrieves data from siren.pp.ua</string>
    <string name="select_region_title">Select region</string>
    <string name="cancel">Cancel</string>
    <string name="status_title">Alert Status</string>
    <string name="region_prefix">Region: %1$s</string>
    <string name="close">Close</string>
    <string name="alert_active">Air Alert!</string>
    <string name="all_clear">All Clear</string>
    <string name="network_error">Network error</string>
    <string name="entire_region">Entire region</string>
    <string name="back">Back</string>
    <string name="missile_threat">Missile threat</string>
    <string name="drone_threat">Drone threat</string>
    <string name="active_threats_title">Active threats</string>
    <string name="only_red_alerts_title">Notify only on missile alerts (Red)</string>
    <string name="only_red_alerts_subtitle">Ignore drone alerts (Yellow level)</string>
    <string name="time_ago_min">%1$d min ago</string>
    <string name="time_ago_hour">%1$d h ago</string>
    <string name="time_just_now">just now</string>
</resources>
